test/1.2/errors/T_EFORMAT.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
method init {
    /// ERROR EFORMAT
    log "info": "%";
    /// ERROR EFORMAT
    log "info": "%l";
}
